--- a/package.json
+++ b/package.json
@@ -1,21 +1,37 @@
 {
-  "name": "spiced-mint-poi",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@vitejs/plugin-react": "^3.0.0",
-    "vite": "^4.0.0"
-  }
+    "name": "spiced-mint-poi",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev:client": "vite",
+        "dev:server": "nodemon --watch server --ignore server/uploads server/server.cjs",
+        "build": "vite build",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "aws-sdk": "^2.1259.0",
+        "axios": "^1.1.3",
+        "bcryptjs": "^2.4.3",
+        "bootstrap": "^5.2.3",
+        "compression": "^1.7.4",
+        "cookie-session": "^2.0.0",
+        "crypto-random-string": "^3.3.1",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "helmet": "^6.0.1",
+        "multer": "^1.4.5-lts.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router": "^6.4.3",
+        "react-router-dom": "^6.4.3",
+        "spiced-pg": "^1.0.4",
+        "uid-safe": "^2.1.5"
+    },
+    "devDependencies": {
+        "@types/react": "^18.0.26",
+        "@types/react-dom": "^18.0.9",
+        "@vitejs/plugin-react": "^3.0.0",
+        "vite": "^4.0.0"
+    }
 }
