--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "dependencies": {
         "aws-sdk": "^2.1259.0",
-        "axios": "^1.1.3",
+        "axios": "^1.2.4",
         "bcryptjs": "^2.4.3",
         "bootstrap": "^5.2.3",
         "compression": "^1.7.4",
@@ -20,9 +20,11 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "helmet": "^6.0.1",
+        "leaflet": "^1.9.3",
         "multer": "^1.4.5-lts.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-leaflet": "^4.2.0",
         "react-router": "^6.4.3",
         "react-router-dom": "^6.4.3",
         "spiced-pg": "^1.0.4",
