--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
         "express": "^4.18.2",
         "helmet": "^6.0.1",
         "leaflet": "^1.9.3",
+        "mapbox-gl": "^2.12.0",
         "multer": "^1.4.5-lts.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-leaflet": "^4.2.0",
         "react-router": "^6.4.3",
         "react-router-dom": "^6.4.3",
+        "react-scripts": "^4.0.3",
         "spiced-pg": "^1.0.4",
         "uid-safe": "^2.1.5"
     },
