--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@mapbox/mapbox-sdk": "^0.14.0",
         "aws-sdk": "^2.1259.0",
         "axios": "^1.2.4",
         "bcryptjs": "^2.4.3",
@@ -23,9 +24,11 @@
         "leaflet": "^1.9.3",
         "mapbox-gl": "^2.12.0",
         "multer": "^1.4.5-lts.1",
+        "node-geocoder": "^4.2.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-leaflet": "^4.2.0",
+        "react-map-gl": "^7.0.21",
         "react-router": "^6.4.3",
         "react-router-dom": "^6.4.3",
         "react-scripts": "^4.0.3",
