--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "multer": "^1.4.5-lts.1",
         "node-geocoder": "^4.2.0",
         "react": "^18.2.0",
+        "react-bootstrap": "^2.7.0",
         "react-dom": "^18.2.0",
         "react-leaflet": "^4.2.0",
         "react-map-gl": "^7.0.21",
