--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@mapbox/mapbox-gl-geocoder": "^5.0.1",
         "@mapbox/mapbox-sdk": "^0.14.0",
         "aws-sdk": "^2.1259.0",
         "axios": "^1.2.4",
@@ -29,6 +30,7 @@
         "react-dom": "^18.2.0",
         "react-leaflet": "^4.2.0",
         "react-map-gl": "^7.0.21",
+        "react-map-gl-geocoder": "^2.2.0",
         "react-router": "^6.4.3",
         "react-router-dom": "^6.4.3",
         "react-scripts": "^4.0.3",
